@@ -1,5 +1,10 @@
 Revision history for SQL::Abstract
 
+    - New exportable functions: is_literal_value($) and is_plain_value($)
+    - New attribute 'escape_char' allowing for proper escape of quote_chars
+      present in an identifier
+    - Treat { -value => undef } as plain undef in all cases
+
 revision 1.78  2014-05-28
 ----------------------------
     - Fix parsing of binary ops to correctly take up only a single LHS
